# test-ai-engineer

./: .gitignore  LICENSE  README.md  create_colletions.py  docker-compose.yml  insert_informations.py  main.py  pyproject.toml  requirements.txt
data/gold/bandi/: technic_specification.json
data/gold/fornitori/: fornitori_description.json
data/raw/: documentazione di gara.tar.xz  documentazione.tar.xz
notebooks/: TAE_01- Extract data.ipynb  TAE_01- First Notebook.ipynb  TAE_02 - test extraction files.ipynb  TAE_03 - Embedding.ipynb  TAE_04 - Fastapi binary pdf.ipynb  test.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/bandi/0/: newest_clocks.json
qdrant_storage/collections/bandi/0/segments/18cbfbfa-d1f2-4b21-90d1-5de946d3f1dd/: segment.json
qdrant_storage/collections/bandi/0/segments/1c90bf6a-362b-4dff-b6a4-2677883324a2/: mutable_id_tracker.mappings
qdrant_storage/collections/bandi/0/segments/5f14c619-da26-4250-b1bb-1b6d656beb60/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/bandi/0/segments/936887a0-e308-47f0-ae0f-2c49cd4717be/: mutable_id_tracker.mappings
qdrant_storage/collections/bandi/0/segments/c1935f46-ec81-414e-bea2-d2a16877e0ca/: mutable_id_tracker.mappings
qdrant_storage/collections/fornitori/: config.json
qdrant_storage/collections/fornitori/0/: newest_clocks.json
qdrant_storage/collections/test/0/: newest_clocks.json  replica_state.json
src/data/: preprocess.py
src/embedding/: embedding.py
src/model/: requests.py
src/retrivel/: retrivel.py
(+84 files in other folders)
