[project]
name = "test-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.38.0",
    "fastapi>=0.115.14",
    "fastembed>=0.7.1",
    "ipykernel>=6.29.5",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "uvicorn>=0.35.0",
]
